<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SampleServiceOnBoot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="service_label">Sample Service</string>
    <string name="receiver_label">Sample Receiver</string>

    <string name="start_date_button">Select Start Date</string>
    <string name="end_date_button">Select End Date</string>
    <string name="start_date_text">Start Date</string>
    <string name="end_date_text">End Date</string>

    <string name="time_picker_set">Set Time</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="valid_button">Valid</string>
    <string name="reset_date">Reset Date</string>
</resources>
