<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date_button"
        />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_button"
        android:text="@string/start_date_text"
        android:gravity="center"
        />

    <Button
        android:id="@+id/end_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_text"
        android:text="@string/end_date_button"
        />

    <TextView
        android:id="@+id/end_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_button"
        android:text="@string/end_date_text"
        android:gravity="center"
        />



    <Button
        android:id="@+id/valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valid_button"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_date"
        android:layout_above="@id/valid"
        />

</RelativeLayout>
